Upgraders for REXS versions 1.0 to 1.5